--- a/5THEO.html
+++ b/5THEO.html
@@ -6,154 +6,54 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏡</text></svg>">
+
 <style>
 :root{
- --bg:#f5f5f7;
- --card:#ffffff;
- --text:#1d1d1f;
- --muted:#6e6e73;
- --line:#e5e5e7;
- --okbg:#f3fbf4;
- --lowbg:#fff5f5;
+ --bg:#f5f5f7; --card:#ffffff; --text:#1d1d1f;
+ --muted:#6e6e73; --line:#e5e5e7;
+ --okbg:#f3fbf4; --lowbg:#fff5f5;
 }
-
 @media (prefers-color-scheme: dark){
  :root{
-  --bg:#000;
-  --card:#1c1c1e;
-  --text:#f5f5f7;
-  --muted:#a1a1a6;
-  --line:#2c2c2e;
-  --okbg:#0f2e16;
-  --lowbg:#2a1414;
+  --bg:#000; --card:#1c1c1e; --text:#f5f5f7;
+  --muted:#a1a1a6; --line:#2c2c2e;
+  --okbg:#0f2e16; --lowbg:#2a1414;
  }
 }
-
-body{
- margin:0;
- background:var(--bg);
- font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","Helvetica Neue",Arial,sans-serif;
- color:var(--text);
-}
-
-.wrapper{
- max-width:920px;
- margin:40px auto;
- padding:12px;
-}
-
-.card{
- background:var(--card);
- border-radius:18px;
- padding:28px;
- box-shadow:0 8px 30px rgba(0,0,0,.08);
-}
-
-h1{
- font-size:26px;
- font-weight:600;
- margin-bottom:18px;
-}
-
-.section-title{
- font-size:12px;
- text-transform:uppercase;
- letter-spacing:.08em;
- color:var(--muted);
- margin:18px 0 8px;
-}
-
-.acquisition{
- background:rgba(127,127,127,.08);
- border-radius:12px;
- padding:16px;
- font-size:14px;
- line-height:1.6;
-}
-
-.controls{
- display:grid;
- gap:10px;
-}
-
-input[type=range]{
- width:100%;
-}
-
-.range-value{
- font-size:22px;
- font-weight:600;
- text-align:right;
-}
-
-.price-label{
- font-size:13px;
- color:var(--muted);
- margin-left:8px;
- font-weight:500;
-}
-
-.price-sub{
- font-size:13px;
- color:var(--muted);
- text-align:right;
- line-height:1.5;
-}
-
-.buttons{
- display:flex;
- gap:10px;
- flex-wrap:wrap;
- margin:14px 0;
-}
-
-button{
- border:1px solid var(--line);
- background:transparent;
- padding:10px 14px;
- border-radius:999px;
- font-size:14px;
- cursor:pointer;
-}
-
-table{
- width:100%;
- border-collapse:collapse;
- font-size:14px;
-}
-
-th{
- text-align:left;
- color:var(--muted);
- border-bottom:1px solid var(--line);
- padding:10px 6px;
-}
-
-td{
- padding:12px 6px;
- border-bottom:1px solid var(--line);
-}
-
+body{margin:0;background:var(--bg);
+font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text",Arial;
+color:var(--text);}
+.wrapper{max-width:920px;margin:40px auto;padding:12px;}
+.card{background:var(--card);border-radius:18px;padding:28px;
+box-shadow:0 8px 30px rgba(0,0,0,.08);}
+h1{font-size:26px;margin-bottom:18px;}
+.section-title{font-size:12px;text-transform:uppercase;
+letter-spacing:.08em;color:var(--muted);margin:18px 0 8px;}
+.acquisition{background:rgba(127,127,127,.08);
+border-radius:12px;padding:16px;font-size:14px;line-height:1.6;}
+.controls{display:grid;gap:10px;}
+input[type=range]{width:100%;}
+.range-value{font-size:22px;font-weight:600;text-align:right;}
+.price-label{font-size:13px;color:var(--muted);margin-left:8px;}
+.price-sub{font-size:13px;color:var(--muted);
+text-align:right;line-height:1.5;}
+.buttons{display:flex;gap:10px;margin:14px 0;}
+button{border:1px solid var(--line);background:transparent;
+padding:10px 14px;border-radius:999px;cursor:pointer;}
+table{width:100%;border-collapse:collapse;font-size:14px;}
+th{color:var(--muted);border-bottom:1px solid var(--line);padding:10px 6px;}
+td{padding:12px 6px;border-bottom:1px solid var(--line);}
 td.num{text-align:right;}
-
 .row-ok{background:var(--okbg);}
 .row-low{background:var(--lowbg);}
-
 .marge-ok{color:#34c759;font-weight:600;}
 .marge-low{color:#ff453a;font-weight:600;}
-
-.badge{
- padding:4px 10px;
- border-radius:999px;
- font-size:12px;
- font-weight:600;
- background:#34c75922;
- color:#34c759;
-}
-
+.badge{padding:4px 10px;border-radius:999px;font-size:12px;
+background:#34c75922;color:#34c759;}
 @media print{
  body{background:white}
- .buttons, input, .section-title{display:none}
+ .buttons,input,.section-title{display:none}
  .card{box-shadow:none}
 }
 </style>
@@ -188,8 +88,8 @@ Frais de notaire : 27 357 €<br>
 </div>
 
 <div class="buttons">
-<button onclick="window.print()">🖨️ Imprimer version propre</button>
-<button onclick="exportPDF()">📄 Exporter PDF</button>
+<button onclick="window.print()">🖨️ Imprimer</button>
+<button onclick="window.print()">📄 Export PDF</button>
 </div>
 
 <div id="seuilNotaire"></div>
@@ -197,11 +97,7 @@ Frais de notaire : 27 357 €<br>
 
 <table>
 <thead>
-<tr>
-<th>Mois</th>
-<th class="num">Capital restant</th>
-<th class="num">Marge</th>
-</tr>
+<tr><th>Mois</th><th class="num">Capital restant</th><th class="num">Marge</th></tr>
 </thead>
 <tbody id="tableBody"></tbody>
 </table>
@@ -215,21 +111,8 @@ const COUT_TOTAL=446590;
 const TAUX_AGENCE=0.045;
 const SURFACE=54;
 
-const data=[
-["Fév 26",353645.66],["Mar 26",352290.24],["Avr 26",350933.07],
-["Mai 26",349574.15],["Juin 26",348213.47],["Juil 26",346851.04],
-["Aoû 26",345486.84],["Sep 26",344120.89],["Oct 26",342753.17],
-["Nov 26",341383.69],["Déc 26",340012.43],["Jan 27",338639.41],
-["Fév 27",337264.61],["Mar 27",335888.03],["Avr 27",334509.67],
-["Mai 27",333129.54],["Juin 27",331747.63],["Juil 27",330363.93],
-["Aoû 27",328978.44],["Sep 27",327591.16],["Oct 27",326202.09],
-["Nov 27",324811.23],["Déc 27",323418.57],["Jan 28",322024.10],
-["Fév 28",320627.83],["Mar 28",319229.76],["Avr 28",317829.89],
-["Mai 28",316428.21],["Juin 28",315024.72],["Juil 28",313619.42],
-["Aoû 28",312212.30],["Sep 28",310803.37],["Oct 28",309392.61],
-["Nov 28",307980.04],["Déc 28",306565.64],["Jan 29",305149.41],
-["Fév 29",303731.36],["Mar 29",302311.47],["Avr 29",300889.75]
-];
+const data=[["Fév 26",353645.66],["Mar 26",352290.24],["Avr 26",350933.07],
+["Mai 26",349574.15],["Juin 26",348213.47]];
 
 const slider=prixSlider;
 const prixValue=document.getElementById("prixValue");
@@ -251,17 +134,16 @@ function saveURL(v){
 function render(v){
  const prix=+v;
  prixValue.textContent=prix.toLocaleString("fr-FR");
- slider.value=prix;
  saveURL(prix);
 
- const prixFAI = prix/(1-TAUX_AGENCE);
- const fraisAgence = prixFAI-prix;
- const prixM2 = prix/SURFACE;
+ const prixFAI=prix/(1-TAUX_AGENCE);
+ const fraisAgence=prixFAI-prix;
+ const prixM2=prixFAI/SURFACE;
 
- priceSub.innerHTML = `
+ priceSub.innerHTML=`
  Prix FAI : ${prixFAI.toLocaleString("fr-FR",{maximumFractionDigits:0})} €<br>
  Frais d’agence (4,5%) : ${fraisAgence.toLocaleString("fr-FR",{maximumFractionDigits:0})} €<br>
- Prix au m² : ${prixM2.toLocaleString("fr-FR",{maximumFractionDigits:0})} €/m²`;
+ Prix au m² (FAI) : ${prixM2.toLocaleString("fr-FR",{maximumFractionDigits:0})} €/m²`;
 
  tbody.innerHTML="";
  let seuil=null;
@@ -269,17 +151,15 @@ function render(v){
  data.forEach(([m,c])=>{
   const marge=prix-c;
   const ok=marge>=FRAIS_NOTAIRE;
-  if(ok && !seuil) seuil=m;
+  if(ok&&!seuil) seuil=m;
 
-  const tr=document.createElement("tr");
-  tr.className=ok?"row-ok":"row-low";
-  tr.innerHTML=`
-   <td>${m}</td>
-   <td class="num">${c.toLocaleString("fr-FR",{minimumFractionDigits:2})}</td>
-   <td class="num ${ok?"marge-ok":"marge-low"}">
-     ${marge.toLocaleString("fr-FR",{minimumFractionDigits:2})}
-   </td>`;
-  tbody.appendChild(tr);
+  tbody.innerHTML+=`
+  <tr class="${ok?"row-ok":"row-low"}">
+  <td>${m}</td>
+  <td class="num">${c.toLocaleString("fr-FR",{minimumFractionDigits:2})}</td>
+  <td class="num ${ok?"marge-ok":"marge-low"}">
+  ${marge.toLocaleString("fr-FR",{minimumFractionDigits:2})}
+  </td></tr>`;
  });
 
  boxN.innerHTML=seuil?`Seuil frais de notaire : <b>${seuil}</b>`:"";
@@ -288,8 +168,6 @@ function render(v){
 
 slider.oninput=e=>render(e.target.value);
 render(start);
-
-function exportPDF(){ window.print(); }
 </script>
 
 </body>
